--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_sign_in: ^5.3.1
   firebase_messaging: ^11.4.0
   flutter_local_notifications: ^9.5.3+1
+  cloud_firestore: ^3.1.15
 
 dev_dependencies:
   flutter_test:
